--- a/src/admin/includes/css/grandeljay_consistent_flags.css
+++ b/src/admin/includes/css/grandeljay_consistent_flags.css
@@ -23,3 +23,11 @@
 .main img {
     height: 1em;
 }
+
+/**
+ * Info box content
+ */
+.infoBoxContent > img {
+    width: 18px;
+    height: auto;
+}
