style: improve flag sizes

--- a/src/admin/includes/css/grandeljay_consistent_flags.css
+++ b/src/admin/includes/css/grandeljay_consistent_flags.css
@@ -23,3 +23,11 @@
 .main img {
     height: 1em;
 }
+
+/**
+ * Box content
+ */
+.infoBoxHeadingTitle > img {
+    height: 1em;
+    vertical-align: middle;
+}
