--- a/src/admin/includes/css/grandeljay_consistent_flags.css
+++ b/src/admin/includes/css/grandeljay_consistent_flags.css
@@ -36,3 +36,18 @@
     height: 1em;
     vertical-align: middle;
 }
+
+/**
+ * Module Box
+ */
+.modulbox .infoBoxContent input[type="text"],
+.infoBoxContent textarea {
+    width: calc(100% - 64px - 1ch) !important;
+}
+
+.modulbox .infoBoxContent img[src^="/lang/"] {
+    vertical-align: middle;
+    height: calc(1em + 12px + 16px);
+    position: relative;
+    top: -2px;
+}
