--- a/src/admin/includes/css/grandeljay_consistent_flags.css
+++ b/src/admin/includes/css/grandeljay_consistent_flags.css
@@ -40,14 +40,18 @@
 /**
  * Module Box
  */
+.modulbox .infoBoxContent {
+    --flagHeight: calc(1em + 12px + 16px);
+}
+
 .modulbox .infoBoxContent input[type="text"],
 .infoBoxContent textarea {
-    width: calc(100% - 64px - 1ch) !important;
+    width: calc(100% - var(--flagHeight) - 1ch) !important;
 }
 
 .modulbox .infoBoxContent img[src^="/lang/"] {
     vertical-align: middle;
-    height: calc(1em + 12px + 16px);
+    height: var(--flagHeight);
     position: relative;
     top: -2px;
 }
@@ -55,9 +59,33 @@
 /**
  * Config
  */
+.tableConfig .dataTableConfig {
+    --flagHeight: calc(1em + 12px + 16px);
+}
+
 .tableConfig .dataTableConfig img[src^="/lang/"] {
     vertical-align: middle;
-    height: calc(1em + 12px + 16px);
+    width: auto;
+    height: var(--flagHeight);
     position: relative;
     top: -2px;
+}
+
+/**
+ * Sidebar
+ */
+.boxRight .infoBoxContent {
+    --flagHeight: calc(1em + 12px + 16px);
+}
+
+.boxRight .infoBoxContent img[src^="/lang/"] {
+    vertical-align: middle;
+    width: auto;
+    height: var(--flagHeight);
+    position: relative;
+    top: -2px;
+}
+
+.boxRight .infoBoxContent input[type="text"] {
+    width: calc(100% - var(--flagHeight) - 1ch) !important;
 }
